<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="218dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:autofillHints="Enter your email/phone"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="218dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="*****"
        android:hint="@string/profile"
        android:background="@color/white"
        android:drawablePadding="15dp"
        android:drawableEnd="@drawable/eye_slash_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>