<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="25dp">

        <EditText
            android:id="@+id/home_search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="25dp"
            android:autofillHints="Spiderman"
            android:background="@drawable/round_edge_background"
            android:drawableEnd="@drawable/search_linear"
            android:drawablePadding="15dp"
            android:hint="Search for your movie"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="25sp"
            android:paddingEnd="15sp"
            android:typeface="sans"
            tools:ignore="HardcodedText, TouchTargetSize" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:clipToPadding="false"
            android:paddingStart="120dp"
            android:paddingEnd="120dp" />

        <TextView
            android:id="@+id/home_recommend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:maxWidth="250dp"
            android:text="Movie Name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/home_recommend_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:maxWidth="200dp"
            android:maxLines="5"
            android:text="Movie Tag"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="15dp"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/home_play"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/category_playing"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="25dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/home_coming"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/category_upcoming"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="25dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/home_toprate"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/category_toprated"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="25dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/home_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/category_popular"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_movie"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginBottom="15dp"
            android:clipToPadding="false"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />
    </LinearLayout>
</ScrollView>