<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailMovieFragment">

    <ImageView
        android:id="@+id/detail_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:padding="0dp"
        app:srcCompat="@drawable/banner" />

    <ImageView
        android:id="@+id/detail_poster"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:layout_below="@+id/detail_banner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-65dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_banner"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="7sp">

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/charcoal"
            android:drawablePadding="8sp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:text="9.5"
            android:textColor="@color/orange"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/star"
            app:drawableTint="@color/orange"
            tools:ignore="HardcodedText" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_banner"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/detail_poster"
        android:fontFamily="@font/abrilfatface_regular"
        android:maxWidth="200dp"
        android:text="Movie's Name"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/detail_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_poster"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:background="@color/charcoal"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:text="2020"
            android:textColor="@color/silver"
            app:drawableStartCompat="@drawable/calendar"
            app:drawableTint="@color/silver"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@color/slate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:text="148 Minutes"
            android:textColor="@color/silver"
            app:drawableStartCompat="@drawable/time"
            app:drawableTint="@color/silver"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@color/slate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:text="1.9k+"
            android:textColor="@color/silver"
            app:drawableStartCompat="@drawable/ticket"
            app:drawableTint="@color/silver"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <TextView
        android:id="@+id/detail_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_tab"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="18dp"
        android:background="@color/charcoal"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="Action, Super Hero"
        android:textColor="@color/silver"
        app:drawableStartCompat="@drawable/tag"
        app:drawableTint="@color/silver"
        tools:ignore="HardcodedText" />

    <HorizontalScrollView
        android:id="@+id/detail_tabbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_tag"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/about"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="25dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/trailer"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="25dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/cast"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="25dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/reviews"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="25dp"
                android:layout_height="0dp" />

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detail_tabbar"
        android:layout_marginTop="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/detail_movietag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Movie's Description, Information and more"
                tools:ignore="HardcodedText"/>

            <WebView
                android:id="@+id/detail_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:fastScrollEnabled="false"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                app:fastScrollEnabled="false"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="25dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/time_slot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="15dp"
            android:fontFamily="@font/montserrat"
            android:background="@color/white"
            android:textStyle="bold"
            android:text="Movie Begin In"
            tools:ignore="HardcodedText"/>

        <View
            android:layout_width="15dp"
            android:layout_height="0dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/placement"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/yellow"
            app:srcCompat="@drawable/wallet"
            android:padding="10dp"
            android:drawableTint="@color/black"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>